[package]
name = "chmmod-create"
version = "0.1.1"
edition = "2021"
description = "一個用於快速建立 CHM 插件模組的命令列工具"
license = "Apache-2.0"
authors = ["derrick dlin12457@gmail.com"]
repository = "https://github.com/End-YYDS/chmmod-create"
documentation = "https://docs.rs/chmmod-create"
readme = "README.md"
keywords = ["chm", "plugin", "scaffold", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "chmmod-create"
path = "src/main.rs"

[dependencies]
clap = "4.5.23"
dotenv = "0.15.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_yml = "0.0.12"
toml_edit = "0.22.22"
